tests/neg-macros/i15159/Test_2.scala
sealed trait A
case class X(i: Int) extends A

object Test extends App {
  TestMacro.test[A] // error
}
